# otus_homework_1_part_2

./: .gitignore  CMakeLists.txt
.github/workflows/: release.yml
src/: IpFilter.cpp  IpFilter.h  IpStruct.cpp  IpStruct.h  ip_filter.cpp  main.cpp  test_IpFilter.cpp  test_IpStruct.cpp  test_Version.cpp
src/version/: test_version.cpp
